[gd_scene load_steps=9 format=2]

[ext_resource path="res://img Pokemon/img Profil/carte_dresseur_1.png" type="Texture" id=1]
[ext_resource path="res://img Pokemon/img Profil/carte_dresseur_2.png" type="Texture" id=2]
[ext_resource path="res://GUI/Profil/Profil.gd" type="Script" id=3]
[ext_resource path="res://img Pokemon/img Profil/Graphic/OutsideButton2.png" type="Texture" id=4]
[ext_resource path="res://img Pokemon/img Profil/Graphic/OutsideButton.png" type="Texture" id=5]
[ext_resource path="res://Font/60Font.tres" type="DynamicFont" id=6]
[ext_resource path="res://img Pokemon/img Profil/Graphic/pokedollar.png" type="Texture" id=7]
[ext_resource path="res://Font/45Font.tres" type="DynamicFont" id=8]

[node name="Profil" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.29236
margin_right = 1.29236
color = Color( 0.129412, 0.407843, 0.376471, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG1" type="TextureButton" parent="."]
margin_left = 12.0
margin_top = 80.0
margin_right = 1012.0
margin_bottom = 526.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BG1"]
margin_left = 307.664
margin_top = 99.4164
margin_right = 559.664
margin_bottom = 159.416
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "UNKNOWN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Argent" type="Label" parent="BG1"]
margin_left = 325.298
margin_top = 191.018
margin_right = 506.298
margin_bottom = 251.018
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokedollar" type="TextureRect" parent="BG1"]
margin_left = 562.087
margin_top = 182.42
margin_right = 633.087
margin_bottom = 285.42
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )

[node name="TempsDeJeu" type="Label" parent="BG1"]
margin_left = 362.223
margin_top = 283.095
margin_right = 775.223
margin_bottom = 328.095
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1 J / 10 H / 10 M"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG2" type="TextureButton" parent="."]
visible = false
margin_left = 12.0
margin_top = 80.0
margin_right = 1012.0
margin_bottom = 532.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 931.501
margin_right = 1025.5
margin_bottom = 60.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BG1" to="." method="_on_BG1_pressed"]
[connection signal="pressed" from="BG2" to="." method="_on_BG2_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
